# Student_At_Risk_Detector

./: Makefile  README.md  SetYouUp.ipynb  pyproject.toml  requirements.txt
notebooks/: Experiment1.ipynb  Experiment2.ipynb  Experiment3.ipynb  Experiment4.ipynb
student_at_risk_detector/: __init__.py  dataset.py
student_at_risk_detector/modeling/: predict.py  train.py
