[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "student_at_risk_detector"
version = "0.0.1"
description = "Student at Academic Risk Detector: Developed a machine learning solution to identify students at risk of academic underperformance using educational data, featuring data preprocessing, feature engineering, model training, and actionable insights for early intervention; Tech: Python, Scikit-Learn, Pandas, NumPy, Matplotlib, Seaborn, Data Analytics, Machine Learning, Data Visualization, Jupyter Notebook, Data Science, Predictive Modeling, EDA."
authors = [
  { name = "Agam Singh Saini" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "^3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["student_at_risk_detector"]
force_sort_within_sections = true


